stop scrolling on smaller screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -139,6 +139,7 @@
 @media screen and (max-width: 1024px) {
   .layout {
     padding: 1.5rem;
+    overflow-x: hidden;
   }
 
   .container {
